e-commerce/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
spec:
  defaultBackend:
    service:
      name: home-app-service
      port:
        number: 80
  ingressClassName: nginx
  rules:
    - host: "*"
      http:
        paths:
          - path: /cloth
            pathType: Prefix
            backend:
              service:
                name: cloth-app-service
                port:
                  number: 80
